[package]
name = "tool"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
log = "0.4.29"
eframe = "0.33.3"
egui_extras = "0.33.3"
resvg = "0.47.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
flexi_logger = { version = "0.31.8", features = ["json", "compress"] }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
